redactable/tests/ui/sensitive_scalar_non_secret_rejected.stderr
error: scalar fields can only use #[sensitive(Secret)]; other policies are for string-like types
 --> tests/ui/sensitive_scalar_non_secret_rejected.rs:5:5
  |
5 |     #[sensitive(redactable::Pii)]
  |     ^
