redactable/tests/ui/sensitive_scalar_non_secret_rejected.rs
use redactable::Sensitive;

#[derive(Clone, Sensitive)]
struct Counter {
    #[sensitive(redactable::Pii)]
    value: u64,
}

fn main() {}
